--- a/week1/Day4/CV-exercise/style.css
+++ b/week1/Day4/CV-exercise/style.css
@@ -1,10 +1,154 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/*this little piece of code is what fixed my problem of having a white space on the right side of the page*/
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
+/*nav bar set up ( started adding a border and deleted it after everything was set and in place, just so I could vizualize the placemnet better)*/
+
 .navbar {
-  border: 5px solid rgb(67, 115, 179);
+  display: flex;
+  justify-content: space-between;
+
   font-size: 115%;
-  color: grey;
+  color: rgb(87, 86, 86);
+  width: 100%;
+  height: auto;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 20px;
+  font-family: "Lora", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.nav-right {
+  float: right;
 }
 
 .link-nav {
   text-decoration: none;
+  color: rgb(91, 90, 90);
+  padding-left: 25px;
+}
+
+.link-nav:hover {
+  color: rgb(76, 136, 142);
+}
+
+/*Set up for the header with a picture of me as profile and a short description*/
+
+header {
+  margin-top: 80px;
+
+  border: 1px solid rgb(76, 136, 142);
+  padding: 100px;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 800px) {
+  header {
+    height: 150px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  header {
+    height: 100px;
+  }
+}
+#first-p {
+  margin-bottom: 40px;
+}
+
+header > h3 {
+  font-family: "Lora", serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 200%;
+  color: rgb(33, 85, 90);
+}
+
+.p-header {
+  color: rgb(87, 86, 86);
+  line-height: 130%;
+  margin-top: 50px;
+  width: 90%;
+  margin-left: 20px;
+  font-size: 150%;
+}
+
+.circle {
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  overflow: hidden;
+  background-image: url(/Users/sarahgarson/Documents/DI_Bootcamp/week1/Day4/CV-exercise/cv-picture.jpeg);
+  background-size: cover;
+  float: left;
+  margin-right: 100px;
+  margin-left: 80px;
+  border: 10px solid rgb(76, 136, 142);
+}
+#button1 {
+  margin-left: 40px;
+  background-color: white;
+}
+.linkedin {
+  padding: 5px 10px;
+  font-size: 110%;
   color: grey;
+  text-decoration: none;
+  margin-top: 50px;
+  border-radius: 20px;
+}
+
+.linkedin:hover {
+  border-color: rgb(76, 136, 142);
+  color: rgb(76, 136, 142);
+}
+
+/*Now doing the article no1 part of the cv, where I show my experiences*/
+
+#experiences {
+  font-family: "Lora", serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 130%;
+  color: rgb(33, 85, 90);
+  margin-top: 70px;
+  margin-bottom: 40px;
+}
+
+.up-left {
+  border: 1px solid rgb(33, 85, 90);
+  padding: 20px;
+  box-sizing: border-box;
+  color: rgb(87, 86, 86);
+  font-size: 20px;
+  line-height: 30px;
+  float: left;
+}
+
+.up-right {
+  border: 1px solid rgb(33, 85, 90);
+  padding: 20px;
+  box-sizing: border-box;
+  color: rgb(87, 86, 86);
+  font-size: 20px;
+  line-height: 30px;
+  float: right;
 }
