--- a/week1/Day5/Mini-project/products.css
+++ b/week1/Day5/Mini-project/products.css
@@ -12,6 +12,7 @@ body {
   overflow-x: hidden;
   background-image: url(/Users/sarahgarson/Documents/DI_Bootcamp/week1/Day5/Mini-project/birmingham-museums-trust-HEEvYhNzpEo-unsplash.jpg);
   background-size: cover;
+  background-repeat: no-repeat;
   width: 100%;
   height: 100vh;
 }
@@ -55,27 +56,64 @@ body {
   color: rgb(6, 55, 6);
 }
 
-.card {
-  width: 300px;
-  border: 1px solid #ccc;
+.row {
+  display: flex;
+  flex-direction: row; /* Center the cards horizontally */
+  margin-top: 1%; /* Adjust the margin as needed */
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.column {
+  border: 1px solid #ebebeb;
   border-radius: 8px;
-  overflow: hidden;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-top: 200px;
-  margin-bottom: 300px;
-  margin-left: 200px;
+  margin: 10% 13%; /* Add some margin between cards */
+  background-color: #ece7e7;
+  transition: transform 0.3s ease; /* Add transition effect for hover */
+  float: left;
+  width: 50%;
 }
 
-.card:hover {
-  transform: scale(1.05);
+@media screen and (max-width: 600px) {
+  .card {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
 }
 
-.card img {
+.column:hover {
+  transform: scale(1.05); /* Increase size on hover */
+}
+
+.column img {
   width: 100%;
   height: auto;
-  display: block;
+  border-radius: 8px 8px 0 0; /* Rounded corners for the top of the image */
 }
 
-.container {
+.card {
   padding: 20px;
+  text-align: center;
+}
+
+.cart-button {
+  margin-top: 10px;
+  color: antiquewhite;
+  background-color: rgb(10, 57, 10);
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.cart-button:hover {
+  transform: scale(1.05);
+  background-color: grey;
 }
