--- a/week1/Day5/Mini-project/style.css
+++ b/week1/Day5/Mini-project/style.css
@@ -12,13 +12,27 @@ body {
   overflow-x: hidden;
 }
 
-header {
+body {
   background-image: url(/Users/sarahgarson/Documents/DI_Bootcamp/week1/Day5/Mini-project/birmingham-museums-trust-HEEvYhNzpEo-unsplash.jpg);
   background-size: cover;
   width: 100%;
   height: 100vh;
 }
+#welcome {
+  text-align: center;
+  color: rgb(115, 13, 34);
+  font-size: 250%;
+  margin-top: 10%;
+}
 
+#p-header {
+  font-size: 150%;
+  text-align: center;
+  margin: 6% 20%;
+
+  background-color: rgb(178, 212, 195, 0.5);
+  color: rgb(115, 13, 34);
+}
 .topnav {
   margin-left: 20px;
   margin-right: 20px;
@@ -56,6 +70,13 @@ header {
   text-align: center;
   background-color: rgb(106, 174, 106, 0.5);
   color: rgb(6, 55, 6);
+  padding-top: 10%;
+}
+
+.wiki {
+  padding-bottom: 7%;
+  font-size: 110%;
+  color: rgb(4, 30, 4);
 }
 
 .card {
