--- a/week2/Day2/exercise1/style.css
+++ b/week2/Day2/exercise1/style.css
@@ -158,7 +158,7 @@ header {
 
 .card {
   width: 355px;
-  box-sizing: border-box;
+  box-sizing: content-box;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: 0.3s;
 }
