project-not-responsive

--- a/PortifolioProject/main.css
+++ b/PortifolioProject/main.css
@@ -1,39 +1,251 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
+html,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+a {
+  font-family: "PT Serif", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
 /*NAV BAR AREA*/
 .navbar-nav {
-  width: 100%;
+  width: 80%;
+}
+
+.navbar-brand {
+  margin-left: 5%;
+}
+
+/*HEADER AREA INCLUDING IMG AND TEXT*/
+.figure {
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
 }
 
 .container-header {
-  position: relative; /* Necessary for positioning */
+  position: relative;
   width: 100%;
   height: 100vh;
 }
 
-.carousel-caption {
-  position: fixed; /* or position: absolute; */
-  margin-bottom: 20%;
+.header-hs {
+  position: absolute;
+  margin-bottom: 13%;
   margin-right: 25%;
 }
 
 .text-header {
-  /* Target the .nav-link class */
   color: rgb(115, 113, 113);
   font-size: 250%;
+}
+.p-header {
+  font-size: 120%;
+  margin-top: 5%;
 }
 
 .h1-header {
   font-size: 350%;
 }
 
-/* Media query for screens smaller than 768px */
+/*COLUMNS ABOUT AND SKILLS*/
 
-/* Media query for screens smaller than 576px */
-@media screen and (max-width: 700px) {
-  .text-header {
-    font-size: 150%;
-  }
-
-  .carousel-caption {
-    margin-bottom: 70%;
-  }
+.container1 {
+  margin-top: 30%;
+  color: rgb(115, 113, 113);
+  margin-bottom: 20%;
 }
+
+.column-about {
+  width: 100%;
+  padding-left: 10%;
+}
+
+.p-article {
+  line-height: 210%;
+}
+
+.skills {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.skills-box {
+  padding: 1rem 2rem;
+  margin-bottom: 1.5rem;
+  margin-top: 5%;
+  margin-right: 1.5rem;
+  font-size: 140%;
+  background: rgba(153, 153, 153, 0.2);
+  border-radius: 5px;
+  font-weight: 500;
+  color: #666;
+}
+
+/*PROJECTS AREA*/
+
+.h4-projects {
+  color: rgb(115, 113, 113);
+  font-size: 200%;
+}
+
+.p-cards {
+  color: rgb(115, 113, 113);
+  margin-left: 32%;
+  width: 40%;
+  margin-top: 5%;
+  line-height: 210%;
+  font-size: 120%;
+}
+
+.container2 {
+  margin-bottom: 10%;
+  margin: 10% 10%;
+}
+
+.card-text {
+  color: rgb(115, 113, 113);
+}
+
+.card:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* Add shadow on hover */
+  transition: 0.3s; /* Smooth transition */
+}
+.card:hover .card-img-top {
+  opacity: 0.7; /* Reduce opacity of image on hover */
+}
+.card:hover .card-body {
+  background-color: #f8f9fa; /* Change background color of card body on hover */
+}
+
+.card-link {
+  text-decoration: none;
+}
+
+#about {
+  scroll-margin-top: 170px;
+}
+
+#projects {
+  scroll-margin-top: 30px;
+}
+
+#contact {
+  scroll-margin-top: 100px;
+}
+
+#projects {
+  background-color: rgb(237, 237, 237);
+  padding-top: 10%;
+  padding-bottom: 10%;
+}
+
+/*SIDE BAR WITH GITHUB AND LINKEDIN*/
+
+/* Style for the sidebar */
+.sidebar {
+  position: fixed;
+  top: 40%;
+  left: 10px;
+  height: 5%;
+  width: 50px;
+}
+
+.contact-social-link {
+  color: rgb(85, 83, 83);
+  font-size: 200%;
+  margin-top: 10%;
+}
+
+/*GITHUB BUTTONS PATHS*/
+
+.github-paths {
+  margin-bottom: 15%;
+  padding-bottom: 15%;
+  text-align: center;
+  background-color: rgb(237, 237, 237);
+}
+
+.h5-github-paths {
+  color: rgb(115, 113, 113);
+  margin-bottom: 5%;
+}
+
+.button-github {
+  margin-left: 10%;
+  background-color: rgb(211, 208, 208);
+  width: 12%;
+  border-radius: 5px;
+  color: #8b8787;
+}
+
+.btn-group {
+  background-color: rgb(159, 156, 156);
+  border-radius: 5px;
+  width: 14%;
+}
+
+button > a {
+  text-decoration: none;
+  color: whitesmoke;
+}
+
+.profile-picture {
+  margin-left: 10%;
+}
+
+/*CONTACT AREA*/
+#contact {
+  margin-top: -15%;
+}
+.h1-contact {
+  color: rgb(115, 113, 113);
+}
+
+.h1-container {
+  margin-bottom: 26%;
+}
+
+.icons {
+  display: flex; /* Use flexbox */
+  gap: 50px; /* Add space between icons */
+  margin-bottom: 23%;
+  justify-content: center;
+}
+
+.icons i {
+  font-size: 350%;
+  color: white;
+}
+
+/*FOOTER AREA*/
+footer {
+  background-color: #c9c8c8;
+  width: 100%;
+  padding-bottom: 2%;
+}
+
+.container-footer {
+  padding-top: 8%;
+}
+
+/*Media queries fot the whole page*/
